--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -76,6 +76,10 @@ $dropdown-font-size: 0.85rem !default;
 $dropdown-border-color: $border-color !default;
 
 // Images
-$login-image: 'https://source.unsplash.com/K4mSJ7kc0As/600x800' !default;
-$register-image: 'https://source.unsplash.com/Mv9hjnEUHR4/600x800' !default;
-$password-image: 'https://source.unsplash.com/oWTW-jNGl9I/600x800' !default;
+// $login-image: 'https://source.unsplash.com/K4mSJ7kc0As/600x800' !default;
+// $register-image: 'https://source.unsplash.com/Mv9hjnEUHR4/600x800' !default;
+// $password-image: 'https://source.unsplash.com/oWTW-jNGl9I/600x800' !default;
+
+$login-image: '../img/emotron.png' !default;
+$register-image: '../img/emotron.png' !default;
+$password-image: '../img/emotron.png' !default;
